bk_ida/gccida/g1/debug_reload_to_stream
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/reload.c:7386:22: error: use of undeclared identifier 'reg_class_names_0'; did you mean 'reg_class_names'?
fprintf( v1, "%s, ", reg_class_names_0[*( ( int *)v2 + 4)]); 
                     ^~~~~~~~~~~~~~~~~
                     reg_class_names
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/reload.c:6884:27: note: 'reg_class_names' declared here
static const char * const reg_class_names[] = REG_CLASS_NAMES;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/reload.c:7428:51: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_in_icode = %s", "\n\t", insn_data_0[v8].name); 
                                                  ^~~~~~~~~~~
                                                  insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/reload.c:7433:48: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_out_icode = %s", v9, insn_data_0[v10].name); 
                                               ^~~~~~~~~~~
                                               insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_reload_to_stream/src/obj/reload.o] Error 1
